code cleanup removing extra code and fixing river png alignment

--- a/style.css
+++ b/style.css
@@ -47,25 +47,21 @@ body{
   background: url(images/clayspot.jpg) no-repeat;
   background-size: cover;
   text-shadow: white 1px 1px 2px;
-  background-color: white;
 }
 .resourceContainer > div.food{
   background: url(images/foodspot.jpg) no-repeat;
   background-size: cover;
   text-shadow: white 1px 1px 2px;
-  background-color: white;
 }
 .resourceContainer > div.wood{
   background: url(images/woodspot.jpg) no-repeat;
   background-size: cover;
   text-shadow: white 1px 1px 2px;
-  background-color: white;
 }
 .resourceContainer > div.stone{
   background: url(images/stonespot.jpg) no-repeat;
   background-size: cover;
   text-shadow: white 1px 1px 2px;
-  background-color: white;
 }
 .buildingsWrapper {
   height: 98%;
@@ -102,6 +98,10 @@ body{
   display: flex;
   position: relative;
   justify-content: flex-end;
+}
+.playerArea > div {
+  justify-self: flex-start;
+  flex: 1;
 }
 .playerArea img {
   width: 100%;
